--- a/PersonalPortfolioWebpage.html
+++ b/PersonalPortfolioWebpage.html
@@ -9,7 +9,16 @@
     <p >
     <h1>Hllo we are software developers</h1>
   </p>
-  </section
+</section>
+
+<section id="projects"> 
+  <h1>These are some of my projects</h1>
+  <div class="project-title">
+    <img src="" alt="">
+    
+  </div>
+
+</section>
 
 </body>
 </html>
