--- a/PersonalPortfolioWebpage.html
+++ b/PersonalPortfolioWebpage.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="Style.css">
   <meta charset="UTF-8">
   <title></title>
 </head>
 <body>
+<nav id="navbar" >
+  <a href ="https://cdpn.io/freeCodeCamp/fullpage/zNBOYG#welcome-section">About</a>
+  <a href="https://cdpn.io/freeCodeCamp/fullpage/zNBOYG#projects">Work</a>
+  <a href="https://cdpn.io/freeCodeCamp/fullpage/zNBOYG#contact">Contact</a>
+</nav>
   <section id= "welcome-section">
     <p >
-    <h1>Hllo we are software developers</h1>
+    <h1>Hello we are software developers</h1>
   </p>
+
 </section>
 
-<section id="projects"> 
+<section id="projects">
   <h1>These are some of my projects</h1>
   <div class="project-title">
     <img src="" alt="">
-    
+    <a href="https://codepen.io/freeCodeCamp/full/zNqgVx">Dr. Norman Borlaug</a>
+
   </div>
+
+
 
 </section>
 
