Add link to github page and media query

--- a/PersonalPortfolioWebpage.html
+++ b/PersonalPortfolioWebpage.html
@@ -26,6 +26,12 @@
 
   </div>
 
+ 
+
+ <a id="Profile-link" href="https://github.com/Mindo-Joseph" target="_blank">Github</a>
+
+  
+
 
 
 </section>
