Change layout of projects, align profile link

--- a/PersonalPortfolioWebpage.html
+++ b/PersonalPortfolioWebpage.html
@@ -13,37 +13,41 @@
 </nav>
   <section id= "welcome-section">
     <p >
-    <h1>Hello we are software developers</h1>
+    <h1 align="center">Hello we are software developers</h1>
   </p>
 
 </section>
 
 <section id="projects">
-  <h1>These are some of our projects</h1>
+  <h1 align="center">These are some of our projects</h1>
   <div class="project-title">
     <a href="https://github.com/ChedlyMar/ChedlyJoseph">
       <img src="https://comps.canstockphoto.com/initial-letter-cj-logo-template-design-vector-clip-art_csp63929317.jpg" alt=""><br>
       Chedly and Joseph Project
     </a><br>
   </div>
-  <div>
+
+  <div class="project-title"> 
     <a href="https://github.com/ChedlyMar/ChedlyHerman">
       <img src="https://image.shutterstock.com/image-vector/monogram-logo-letter-ch-sliced-260nw-1175291074.jpg"><br>
       Chedly and Herman Project</a><br>
   </div>
-  <div>
+  <div class="project-title">
   <a href="https://github.com/ChedlyMar/ChedlyRexford">
     <img src="https://as2.ftcdn.net/jpg/01/68/40/29/500_F_168402967_AYP39mjSAGNeSK1v0Dq7a8HYEfqcHrOH.jpg"><br>
     Chedly and Rexford Project</a><br>
   </div>
-  <div>
+  <div class="project-title">
   <a href="https://github.com/Mindo-Joseph/microverse_html-css">
     <img src="https://st4.depositphotos.com/20837402/27896/v/1600/depositphotos_278968914-stock-illustration-initial-jh-logo-template-with.jpg" ><br>
     Joseph and Herman Project</a><br>
 
-</div>
+</div> <br>
 
- <a id="Profile-link" href="https://github.com/Mindo-Joseph" target="_blank">Github</a>
+
+<p style="text-align: center;">More projects available here</p>
+
+ <a class="profile" id="Profile-link" href="https://github.com/Mindo-Joseph" target="_blank"><p style="text-align: center;"> Github</p></a>
 
 
 
